--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    padding-top: 80px;
+}
+
 .container {
     width: 60%;
     margin: 0 auto;
@@ -13,6 +17,6 @@ ul {
     list-style-type: none;
 }
 
-li a {
+a {
     text-decoration: none;
 }
